Change img and layout

--- a/about.html
+++ b/about.html
@@ -42,28 +42,34 @@
     <div>
       <div class="container">
 
-        <picture id="my-profile">
-          <source srcset="img/home/head@1.png" media="(max-width:767px)">
-          <img src="img/home/head@2.png" alt="Profile picture" width="400">
-        </picture>
-
         <div>
           <section id="intro-details">
             <!-- column 1 my intro starts -->
-            <h2 class="hidden">Design Explorer</h2>
 
-            <p>My name is Yunwen Tu, and all my friends go by Tutu :)</p>
-            <p>I am a user experience designer and food designer currently working at The SIX, a business design consultancy dedicated to finding creative solutions for clients through the Design Sprint and Design Thinking process. As one of the
-              co-founders, I research and prototype with the clients and their users to solve business challenges. </p>
-            <p>Through my works, I found business problems are very often caused by the lack of understanding of the user's needs, or not having enough tangible work to align expectations between stakeholders in order to make executions. “Design
-              process” is my way to re-evaluate the problem and to find the best solutions. It is used as a “communication interface” to align different parties’ expectations and identify the solution to the key problem that we want to test. With
-              the “design process” emphasized, I was able to validate ideas on many UX and product design projects in a more efficient manner.</p>
-            <p>In addition to the client’s work, I am also very interested in speculative design and the future food system. Instead of blindly worshiping technology, design and data enabled me to simulate more future possibilities. </p>
-            <p>To explore the future of food, I am seeking ways to push design boundaries to envision how the food will impact/be impacted by environmental, socioeconomic, political, and technological trends. I have collaborated with social mission
-              restaurants Perennial and Don Bugito on reducing the carbon footprint of the food we eat. My work has been featured in food design exhibitions at the Asian Art Museum (San Francisco), Foodinno Symposium, California Academy of
-              Sciences, Chinese Culture Center (San Francisco) and etc.</p>
+            <h2>My name is Yunwen Tu, and all my friends go by Tutu :)
+              <br>
+              I am a user experience designer and food designer currently working at The SIX, a business design consultancy dedicated to finding creative solutions for clients through the Design Sprint and Design Thinking process. As one of the
+              co-founders, I research and prototype with the clients and their users to solve business challenges. </h2>
+        </div>
 
-            <a href="files/YunwenTu_CV.pdf" download target="_blank" class="button"> Resume </a>
+        <div id="profile-img">
+          <picture id="my-profile">
+            <source srcset="img/home/head-drawing@1.png" media="(max-width:767px)">
+            <img src="img/home/head-drawing@2.png" alt="Profile picture" width="400">
+          </picture>
+        </div>
+
+        <div>
+          <h3 class="hidden">More about me</h3>
+          <p>Through my works, I found business problems are very often caused by the lack of understanding of the user's needs, or not having enough tangible work to align expectations between stakeholders in order to make executions. “Design
+            process” is my way to re-evaluate the problem and to find the best solutions. It is used as a “communication interface” to align different parties’ expectations and identify the solution to the key problem that we want to test. With
+            the “design process” emphasized, I was able to validate ideas on many UX and product design projects in a more efficient manner.</p>
+          <p>In addition to the client’s work, I am also very interested in speculative design and the future food system. Instead of blindly worshiping technology, design and data enabled me to simulate more future possibilities. </p>
+          <p>To explore the future of food, I am seeking ways to push design boundaries to envision how the food will impact/be impacted by environmental, socioeconomic, political, and technological trends. I have collaborated with social mission
+            restaurants Perennial and Don Bugito on reducing the carbon footprint of the food we eat. My work has been featured in food design exhibitions at the Asian Art Museum (San Francisco), Foodinno Symposium, California Academy of
+            Sciences, Chinese Culture Center (San Francisco) and etc.</p>
+
+          <a href="files/YunwenTu_CV.pdf" download target="_blank" class="button"> Resume </a>
 
           </section> <!-- my intro ends -->
 
