--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       <div>
         <h1>Hi! I’m Tutu.
           <br>
-          <span style="font-size:20pt">I am a <a href="#projects">UX/UI</a> and a <a href="http://tutufooddesign.com/" target="_blank">food</a> designer.
+          <span id="hero-intro">I am a <a href="#projects">UX/UI</a> and a <a href="http://tutufooddesign.com/" target="_blank">food</a> designer.
             As one of the co-founder at <a href="https://www.the-six.co/" target="_blank">The Six</a>, I have worked with clients in AI, education, automobile, energy, and fintech industries. To me, design process
             empowers me to learn about people & technology and to shape a more preferable future.</span>
         </h1>
@@ -73,8 +73,8 @@
             <!-- Q: I would love to explore how to make a hover-over effect for this section  -->
             <a href="design-a-new-investment-product.html">
               <picture>
-                <source srcset="img/home/hompage-case-1@1.png" media="(max-width:767px)">
-                <img src="img/home/homepage-case-1@2.png" alt="Launch a new investment product">
+                <source srcset="img/home/investment-product-alpha@1.png" media="(max-width:767px)">
+                <img src="img/home/investment-product-alpha@2.png" alt="Launch a new investment product">
               </picture>
             </a>
           </div>
@@ -96,8 +96,8 @@
             <!-- column 1 starts -->
             <a href="case2">
               <picture>
-                <source srcset="img/home/hompage-case-2@1.png" media="(max-width:767px)">
-                <img src="img/home/homepage-case-2@2.png" alt="IT Service Management Design">
+                <source srcset="img/home/ITSM-alpha@1.png" media="(max-width:767px)">
+                <img src="img/home/ITSM-alpha@2.png" alt="IT Service Management Design">
               </picture>
             </a>
           </div>
