Update fonts and layout

--- a/about.html
+++ b/about.html
@@ -33,89 +33,102 @@
   </header>
 
   <main id="about-me">
-    <div class="container">
-      <div>
-        <h1> Who is Tutu </h1>
-      </div>
-    </div>
-
     <div>
+
       <div class="container">
-
         <div>
-          <section id="intro-details">
-            <!-- column 1 my intro starts -->
-
-            <h2>My name is Yunwen Tu, and all my friends go by Tutu :)
-              <br>
-              I am a user experience designer and food designer currently working at The SIX, a business design consultancy dedicated to finding creative solutions for clients through the Design Sprint and Design Thinking process. As one of the
-              co-founders, I research and prototype with the clients and their users to solve business challenges. </h2>
+          <h1> Who is Tutu </h1>
         </div>
+      </div>
 
-        <div id="profile-img">
-          <picture id="my-profile">
-            <source srcset="img/home/head-drawing@1.png" media="(max-width:767px)">
-            <img src="img/home/head-drawing@2.png" alt="Profile picture" width="400">
-          </picture>
+
+      <div>
+        <div id="intro-details" class="container">
+
+          <section>
+            <!-- column 1 my intro 0 starts -->
+
+            <p class="brief">My name is Yunwen Tu, and all my friends go by Tutu :)</p>
+            <p class="brief">I am a user experience designer and food designer currently working at The SIX, a business design consultancy dedicated to finding creative solutions for clients through the Design Sprint and Design Thinking process. As
+              one of the
+              co-founders, I research and prototype with the clients and their users to solve business challenges. </p>
+          </section>
+
+
+          <div class="container">
+            <div id="profile-img" class="row">
+              <picture id="my-profile">
+                <source srcset="img/home/head-drawing@1.png" media="(max-width:767px)">
+                <img src="img/home/head-drawing@2.png" alt="Profile picture" width="400">
+              </picture>
+            </div>
+
+            <div>
+              <section class="row">
+                <!-- my intro 1 starts -->
+                <h2 class="hidden">More about me</h2>
+                <p>Through my works, I found business problems are very often caused by the lack of understanding of the user's needs, or not having enough tangible work to align expectations between stakeholders in order to make executions. “Design
+                  process” is my way to re-evaluate the problem and to find the best solutions. It is used as a “communication interface” to align different parties’ expectations and identify the solution to the key problem that we want to test. With
+                  the “design process” emphasized, I was able to validate ideas on many UX and product design projects in a more efficient manner.</p>
+              </section> <!-- my intro 1 ends -->
+
+              <section class="row">
+                <p>In addition to the client’s work, I am also very interested in speculative design and the future food system. Instead of blindly worshiping technology, design and data enabled me to simulate more future possibilities. </p>
+                <p>To explore the future of food, I am seeking ways to push design boundaries to envision how the food will impact/be impacted by environmental, socioeconomic, political, and technological trends. I have collaborated with social
+                  mission
+                  restaurants Perennial and Don Bugito on reducing the carbon footprint of the food we eat. My work has been featured in food design exhibitions at the Asian Art Museum (San Francisco), Foodinno Symposium, California Academy of
+                  Sciences, Chinese Culture Center (San Francisco) and etc.</p>
+
+                <a href="files/YunwenTu_CV.pdf" download target="_blank" class="button"> Resume </a>
+              </section> <!-- my intro 2 ends -->
+            </div> <!-- wrap two columns -->
+
+          </div>
+
         </div>
+      </div> <!-- wrap all intros -->
 
-        <div>
-          <h3 class="hidden">More about me</h3>
-          <p>Through my works, I found business problems are very often caused by the lack of understanding of the user's needs, or not having enough tangible work to align expectations between stakeholders in order to make executions. “Design
-            process” is my way to re-evaluate the problem and to find the best solutions. It is used as a “communication interface” to align different parties’ expectations and identify the solution to the key problem that we want to test. With
-            the “design process” emphasized, I was able to validate ideas on many UX and product design projects in a more efficient manner.</p>
-          <p>In addition to the client’s work, I am also very interested in speculative design and the future food system. Instead of blindly worshiping technology, design and data enabled me to simulate more future possibilities. </p>
-          <p>To explore the future of food, I am seeking ways to push design boundaries to envision how the food will impact/be impacted by environmental, socioeconomic, political, and technological trends. I have collaborated with social mission
-            restaurants Perennial and Don Bugito on reducing the carbon footprint of the food we eat. My work has been featured in food design exhibitions at the Asian Art Museum (San Francisco), Foodinno Symposium, California Academy of
-            Sciences, Chinese Culture Center (San Francisco) and etc.</p>
+      <div id="skills">
+        <div class="container">
 
-          <a href="files/YunwenTu_CV.pdf" download target="_blank" class="button"> Resume </a>
+          <h2>Skills & Tools</h2>
 
-          </section> <!-- my intro ends -->
+          <section class="row">
+            <img src="img/icons/uxdesign.png" alt="ux design icon" width="50">
+            <h3 class="tool">UX/UI Design</h3>
+            <ul class="brief">
+              <li>User research/synthesis/test</li>
+              <li>Lo-fi & hi-fi prototype/design system</li>
+              <li>Sketch App/Invision/Figma</li>
+              <li>HTML</li>
+            </ul>
+          </section>
 
+          <section class="row">
+            <img src="img/icons/cocreation.png" alt="co-creation icon" width="50">
+            <h3 class="skill">Co-creation</h3>
+            <ul class="brief">
+              <li>Design Sprint/Design Thinking</li>
+              <li>Future thinking frameworks</li>
+              <li>Design experimentation</li>
+            </ul>
+          </section>
 
-          <section id="skills" class="container">
-            <!-- column 2: skills starts -->
+          <section class="row">
+            <img src="img/icons/making.png" alt="2D 3D making icon" width="50">
+            <h3 class="skill">2D + 3D Making</h3>
+            <ul class="brief">
+              <li>Photoshop/Illustrator/Indesign</li>
+              <li>Photography/Lightroom/Premiere</li>
+              <li>Model-making/laser cut/3D print</li>
+              <li>Rhino/Solidworks/Keyshot</li>
+            </ul>
+          </section>
 
-            <h2>Skills & Tools</h2>
+        </div> <!-- skills ends -->
+      </div> <!-- wrap skills -->
 
-            <div class="row">
-              <img src="img/icons/uxdesign.png" alt="ux design icon" width="32">
-              <h3 class="skill">UX/UI Design</h3>
-              <ul>
-                <li>User research/synthesis/test</li>
-                <li>Lo-fi & hi-fi prototype/design system</li>
-                <li>Sketch App/Invision/Figma</li>
-                <li>HTML</li>
-              </ul>
-            </div>
-
-            <div class="row">
-              <img src="img/icons/cocreation.png" alt="co-creation icon" width="32">
-              <h3 class="skill">Co-creation</h3>
-              <ul>
-                <li>Design Sprint/Design Thinking</li>
-                <li>Future thinking frameworks</li>
-                <li>Design experimentation</li>
-              </ul>
-            </div>
-
-            <div class="row">
-              <img src="img/icons/making.png" alt="2D 3D making icon" width="32">
-              <h3 class="skill">2D + 3D Making</h3>
-              <ul>
-                <li>Photoshop/Illustrator/Indesign</li>
-                <li>Photography/Lightroom/Premiere</li>
-                <li>Model-making/laser cut/3D print</li>
-                <li>Rhino/Solidworks/Keyshot</li>
-              </ul>
-            </div>
-          </section> <!-- skills ends -->
-
-        </div> <!-- wrap two columns -->
-      </div> <!-- wrap image and contents -->
-    </div><!-- the entire content block -->
-
+    </div>
   </main>
 
   <!-- Footer -->
