--- a/index.html
+++ b/index.html
@@ -40,12 +40,10 @@
     <div class="container">
 
       <div>
-        <h1>Hi! I’m Tutu.
-          <br>
-          <span id="hero-intro">I am a <a href="#projects">UX/UI</a> and a <a href="http://tutufooddesign.com/" target="_blank">food</a> designer.
-            As one of the co-founder at <a href="https://www.the-six.co/" target="_blank">The Six</a>, I have worked with clients in AI, education, automobile, energy, and fintech industries. To me, design process
-            empowers me to learn about people & technology and to shape a more preferable future.</span>
-        </h1>
+        <h1>Hi! I’m Tutu.</h1>
+        <p class="hero-intro">I am a <a href="#projects">UX/UI</a> and a <a href="http://tutufooddesign.com/" target="_blank">food</a> designer.
+        As one of the co-founder at <a href="https://www.the-six.co/" target="_blank">The Six</a>, I have worked with clients in AI, education, automobile, energy, and fintech industries. </p>
+        <p class="hero-intro">To me, design process empowers me to learn about people & technology and to shape a more preferable future.</p>
       </div>
 
       <div id="hero-contact">
@@ -53,6 +51,7 @@
         <p>San Francisco Bay Area</p>
         <p class="mini-title">EMAIL</p>
         <p>yunwentu22@gmail.com</p>
+        <a href="files/YunwenTu_CV.pdf" download target="_blank"> RESUME </a>
       </div>
 
     </div>
@@ -66,7 +65,7 @@
         <h2>UX/UI Work</h2>
 
         <!-- Case 1 -->
-        <section class="row">
+        <section id="project-1" class="row">
 
           <div>
             <!-- column 1 starts -->
@@ -82,7 +81,7 @@
           <div>
             <!-- column 2 starts -->
             <h3>Launch a New Investment Product</h3>
-            <p>Design website targeting real estate investors, to build trust and explain the financial model in an efficient way.
+            <p class="brief">Design website targeting real estate investors, to build trust and explain the financial model in an efficient way.
             </p>
             <a href="design-a-new-investment-product.html" class="button">Learn more</a> <!-- individual project CTA button, might change this later for more UX consideration-->
           </div>
@@ -90,7 +89,7 @@
         </section> <!-- case 1 ends -->
 
         <!-- Case 2 -->
-        <section class="row">
+        <section id="project-2" class="row">
 
           <div>
             <!-- column 1 starts -->
@@ -105,7 +104,7 @@
           <div>
             <!-- Column 2 starts -->
             <h3>IT Service Management Design</h3>
-            <p>Rapid prototype and iterate new ITSM system design with the users, through Design Thinking process. </p>
+            <p class="brief">Rapid prototype and iterate new ITSM system design with the users, through Design Thinking process. </p>
             <a href="case2" class="button">Learn more</a> <!-- individual project button -->
           </div>
 
