Update copy and IDs

--- a/about.html
+++ b/about.html
@@ -59,7 +59,7 @@
             <div id="profile-img" class="row">
               <picture id="my-profile">
                 <source srcset="img/home/head-drawing@1.png" media="(max-width:767px)">
-                <img src="img/home/head-drawing@2.png" alt="Profile picture" width="400">
+                <img src="img/home/head-drawing@2.png" alt="Profile picture" width="200">
               </picture>
             </div>
 
@@ -106,7 +106,7 @@
 
           <section class="row">
             <img src="img/icons/cocreation.png" alt="co-creation icon" width="50">
-            <h3 class="skill">Co-creation</h3>
+            <h3 class="tool">Co-creation</h3>
             <ul class="brief">
               <li>Design Sprint/Design Thinking</li>
               <li>Future thinking frameworks</li>
@@ -116,7 +116,7 @@
 
           <section class="row">
             <img src="img/icons/making.png" alt="2D 3D making icon" width="50">
-            <h3 class="skill">2D + 3D Making</h3>
+            <h3 class="tool">Making</h3>
             <ul class="brief">
               <li>Photoshop/Illustrator/Indesign</li>
               <li>Photography/Lightroom/Premiere</li>
@@ -135,7 +135,7 @@
   <footer id="contact">
     <div class="container">
       <!-- the footer content wrapper -->
-      <h2> I have more to share </h2>
+      <h2> Let's connect </h2>
       <p>I would also love to learn more from you through a <a href="skype:tutu.yunwen">Skype call</a>. You can also reach me via email: </p>
       <div><a href="mailto:yunwentu22@gmail.com" class="button secondary">Email me</a></div>
 
