--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
   <footer id="contact">
     <div class="container">
       <!-- the footer content wrapper -->
-      <h2> I have more to share </h2>
+      <h2> Let's connect </h2>
       <p>I would also love to learn more from you through a <a href="skype:tutu.yunwen">Skype call</a>. You can also reach me via email: </p>
       <div><a href="mailto:yunwentu22@gmail.com" class="button secondary">Email me</a></div>
 
