--- a/about.html
+++ b/about.html
@@ -35,33 +35,36 @@
   <main id="about-me">
     <div>
 
-      <div class="container">
-        <div>
+        <div class="container">
           <h1> Who is Tutu </h1>
         </div>
-      </div>
 
+<div id="intro-details-1">
 
-      <div>
-        <div id="intro-details" class="container">
-
-          <section>
+          <section class="container">
             <!-- column 1 my intro 0 starts -->
 
             <p class="brief">My name is Yunwen Tu, and all my friends go by Tutu :)</p>
             <p class="brief">I am a user experience designer and food designer currently working at The SIX, a business design consultancy dedicated to finding creative solutions for clients through the Design Sprint and Design Thinking process. As
               one of the
               co-founders, I research and prototype with the clients and their users to solve business challenges. </p>
+
+              <a href="files/YunwenTu_CV.pdf" download target="_blank" class="button"> Resume </a>
+
           </section>
+</div>
 
+          <div id="intro-details-2">
 
-          <div class="container">
-            <div id="profile-img" class="row">
+            <div class="container">
+
+            <div class="row" id="profile-img">
               <picture id="my-profile">
                 <source srcset="img/home/head-drawing@1.png" media="(max-width:767px)">
                 <img src="img/home/head-drawing@2.png" alt="Profile picture" width="200">
               </picture>
             </div>
+
 
             <div>
               <section class="row">
@@ -79,14 +82,13 @@
                   restaurants Perennial and Don Bugito on reducing the carbon footprint of the food we eat. My work has been featured in food design exhibitions at the Asian Art Museum (San Francisco), Foodinno Symposium, California Academy of
                   Sciences, Chinese Culture Center (San Francisco) and etc.</p>
 
-                <a href="files/YunwenTu_CV.pdf" download target="_blank" class="button"> Resume </a>
               </section> <!-- my intro 2 ends -->
             </div> <!-- wrap two columns -->
 
+</div>
           </div>
 
-        </div>
-      </div> <!-- wrap all intros -->
+
 
       <div id="skills">
         <div class="container">
