--- a/index.html
+++ b/index.html
@@ -59,15 +59,15 @@
     <!-- Projects -->
     <div>
       <!-- projects section -->
-      <div class="container" id="projects">
+      <div id="projects">
         <!-- projects content wrapper -->
 
-        <h2>UX/UI Work</h2>
+        <h2 class="container">UX/UI Work</h2>
 
         <!-- Case 1 -->
         <section id="project-1" class="row">
 
-          <div>
+          <div class="container">
             <!-- column 1 starts -->
             <!-- Q: I would love to explore how to make a hover-over effect for this section  -->
             <a href="design-a-new-investment-product.html">
@@ -91,7 +91,7 @@
         <!-- Case 2 -->
         <section id="project-2" class="row">
 
-          <div>
+          <div class="container">
             <!-- column 1 starts -->
             <a href="case2">
               <picture>
