Add missing container to index

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             </a>
           </div>
 
-          <div>
+          <div class="container">
             <!-- column 2 starts -->
             <h3>Launch a New Investment Product</h3>
             <p class="brief">Design website targeting real estate investors, to build trust and explain the financial model in an efficient way.
@@ -101,7 +101,7 @@
             </a>
           </div>
 
-          <div>
+          <div class="container">
             <!-- Column 2 starts -->
             <h3>IT Service Management Design</h3>
             <p class="brief">Rapid prototype and iterate new ITSM system design with the users, through Design Thinking process. </p>
