Adjust the <head> info

--- a/about.html
+++ b/about.html
@@ -2,17 +2,19 @@
 <html lang="en" dir="ltr">
 
 <head>
-  <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,300;0,400;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,600;1,700;1,800;1,900&display=swap">
-  <link rel="stylesheet" type="text/css" href="css/style.css">
 
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="author" content="YunwenTu">
   <meta name="description" content="This is Tutu (Yunwen Tu)'s design explorations, with a few UX, UI, and product design samples.">
   <meta name="keywords" content="Tutu, Design, UX, UI, product, product design, food design, food, speculative, future">
-  <title>About Tutu - Skills and Experiences</title>
+
+  <title>YunwenTu(Tutu) Design Explorer</title>
+  <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,300;0,400;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,600;1,700;1,800;1,900&display=swap">
+  <link rel="stylesheet" type="text/css" href="css/style.css">
   <link href="img/icons/favicon-32x32.png" rel="shortcut icon">
+  <!-- may change the favicon design later -->
 </head>
 
 <body>
