--- a/about.html
+++ b/about.html
@@ -22,7 +22,7 @@
   <!-- Header and navigation -->
   <header id="top">
     <div class="container">
-      <a href="index.html"><img src="img/home/Logo-142x100.png" class="logo" alt="Tutu Logo"></a>
+      <a href="index.html"><img src="img/home/Logo-142x100.png" id="logo" alt="Tutu Logo"></a>
       <nav>
         <ul>
           <li><a href="index.html#projects" target="_self">Projects</a></li>
