Change heading sizes

--- a/design-a-new-investment-product.html
+++ b/design-a-new-investment-product.html
@@ -239,7 +239,7 @@
     <div class="container">
       <!-- the footer content wrapper -->
       <h2> Let's connect </h2>
-      <p>I would also love to learn more from you through a <a href="skype:tutu.yunwen">Skype call</a>. You can also reach me via email: </p>
+      <!-- <p>I would also love to learn more from you through a <a href="skype:tutu.yunwen">Skype call</a>. You can also reach me via email: </p> -->
       <div><a href="mailto:yunwentu22@gmail.com" class="button secondary">Email me</a></div>
 
       <div id="ssn">
@@ -252,7 +252,7 @@
         </ul>
       </div>
 
-      <div><a href="#top">Back to the top</a></div>
+      <!-- <div><a href="#top">Back to the top</a></div> -->
 
       <p>COPYRIGHT YUNWEN TU 2020.</p>
 
