--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
           <div class="container">
             <!-- column 2 starts -->
             <h3>Launch a New Investment Product</h3>
-            <p class="brief">Design website targeting real estate investors, to build trust and explain the financial model in an efficient way.
+            <p>Design website targeting real estate investors, to build trust and explain the financial model in an efficient way.
             </p>
             <a href="design-a-new-investment-product.html" class="button">Learn more</a> <!-- individual project CTA button, might change this later for more UX consideration-->
           </div>
@@ -104,7 +104,7 @@
           <div class="container">
             <!-- Column 2 starts -->
             <h3>IT Service Management Design</h3>
-            <p class="brief">Rapid prototype and iterate new ITSM system design with the users, through Design Thinking process. </p>
+            <p>Rapid prototype and iterate new ITSM system design with the users, through Design Thinking process. </p>
             <a href="case2" class="button">Learn more</a> <!-- individual project button -->
           </div>
 
@@ -120,7 +120,7 @@
     <div class="container">
       <!-- the footer content wrapper -->
       <h2> Let's connect </h2>
-      <p>I would also love to learn more from you through a <a href="skype:tutu.yunwen">Skype call</a>. You can also reach me via email: </p>
+      <!-- <p>I would also love to learn more from you through a <a href="skype:tutu.yunwen">Skype call</a>. You can also reach me via email: </p> -->
       <div><a href="mailto:yunwentu22@gmail.com" class="button secondary">Email me</a></div>
 
       <div id="ssn">
@@ -133,7 +133,7 @@
         </ul>
       </div>
 
-      <div><a href="#top">Back to the top</a></div>
+      <!-- <div><a href="#top">Back to the top</a></div> -->
 
       <p>COPYRIGHT YUNWEN TU 2020.</p>
 
