--- a/about.html
+++ b/about.html
@@ -22,7 +22,7 @@
   <!-- Header and navigation -->
   <header id="top">
     <div class="container">
-      <a href="index.html"><img src="img/home/Logo-142x100.png" id="logo" alt="Tutu Logo"></a>
+      <a href="index.html"><img src="img/home/Logo-142x100.png" class="logo" alt="Tutu Logo"></a>
       <nav>
         <ul>
           <li><a href="index.html#projects" target="_self">Projects</a></li>
@@ -37,58 +37,58 @@
   <main id="about-me">
     <div>
 
+      <div class="container">
+        <h1> Who is Tutu </h1>
+      </div>
+
+      <div id="intro-details-1">
+
+        <section class="container">
+          <!-- column 1 my intro 0 starts -->
+
+          <p class="brief">My name is Yunwen Tu, and all my friends go by Tutu :)</p>
+          <p class="brief">I am a user experience designer and food designer currently working at The SIX, a business design consultancy dedicated to finding creative solutions for clients through the Design Sprint and Design Thinking process. As
+            one of the
+            co-founders, I research and prototype with the clients and their users to solve business challenges. </p>
+
+          <a href="files/YunwenTu_CV.pdf" download target="_blank" class="button"> Resume </a>
+
+        </section>
+      </div>
+
+      <div id="intro-details-2">
+
         <div class="container">
-          <h1> Who is Tutu </h1>
-        </div>
 
-<div id="intro-details-1">
-
-          <section class="container">
-            <!-- column 1 my intro 0 starts -->
-
-            <p class="brief">My name is Yunwen Tu, and all my friends go by Tutu :)</p>
-            <p class="brief">I am a user experience designer and food designer currently working at The SIX, a business design consultancy dedicated to finding creative solutions for clients through the Design Sprint and Design Thinking process. As
-              one of the
-              co-founders, I research and prototype with the clients and their users to solve business challenges. </p>
-
-              <a href="files/YunwenTu_CV.pdf" download target="_blank" class="button"> Resume </a>
-
-          </section>
-</div>
-
-          <div id="intro-details-2">
-
-            <div class="container">
-
-            <div class="row" id="profile-img">
-              <picture id="my-profile">
-                <source srcset="img/home/head-drawing@1.png" media="(max-width:767px)">
-                <img src="img/home/head-drawing@2.png" alt="Profile picture" width="200">
-              </picture>
-            </div>
-
-
-            <div>
-              <section class="row">
-                <!-- my intro 1 starts -->
-                <h2 class="hidden">More about me</h2>
-                <p>Through my works, I found business problems are very often caused by the lack of understanding of the user's needs, or not having enough tangible work to align expectations between stakeholders in order to make executions. “Design
-                  process” is my way to re-evaluate the problem and to find the best solutions. It is used as a “communication interface” to align different parties’ expectations and identify the solution to the key problem that we want to test. With
-                  the “design process” emphasized, I was able to validate ideas on many UX and product design projects in a more efficient manner.</p>
-              </section> <!-- my intro 1 ends -->
-
-              <section class="row">
-                <p>In addition to the client’s work, I am also very interested in speculative design and the future food system. Instead of blindly worshiping technology, design and data enabled me to simulate more future possibilities. </p>
-                <p>To explore the future of food, I am seeking ways to push design boundaries to envision how the food will impact/be impacted by environmental, socioeconomic, political, and technological trends. I have collaborated with social
-                  mission
-                  restaurants Perennial and Don Bugito on reducing the carbon footprint of the food we eat. My work has been featured in food design exhibitions at the Asian Art Museum (San Francisco), Foodinno Symposium, California Academy of
-                  Sciences, Chinese Culture Center (San Francisco) and etc.</p>
-
-              </section> <!-- my intro 2 ends -->
-            </div> <!-- wrap two columns -->
-
-</div>
+          <div class="row" id="profile-img">
+            <picture id="my-profile">
+              <source srcset="img/home/head-drawing@1.png" media="(max-width:767px)">
+              <img src="img/home/head-drawing@2.png" alt="Profile picture" width="200">
+            </picture>
           </div>
+
+
+          <div>
+            <section class="row">
+              <!-- my intro 1 starts -->
+              <h2 class="hidden">More about me</h2>
+              <p>Through my works, I found business problems are very often caused by the lack of understanding of the user's needs, or not having enough tangible work to align expectations between stakeholders in order to make executions. “Design
+                process” is my way to re-evaluate the problem and to find the best solutions. It is used as a “communication interface” to align different parties’ expectations and identify the solution to the key problem that we want to test. With
+                the “design process” emphasized, I was able to validate ideas on many UX and product design projects in a more efficient manner.</p>
+            </section> <!-- my intro 1 ends -->
+
+            <section class="row">
+              <p>In addition to the client’s work, I am also very interested in speculative design and the future food system. Instead of blindly worshiping technology, design and data enabled me to simulate more future possibilities. </p>
+              <p>To explore the future of food, I am seeking ways to push design boundaries to envision how the food will impact/be impacted by environmental, socioeconomic, political, and technological trends. I have collaborated with social
+                mission
+                restaurants Perennial and Don Bugito on reducing the carbon footprint of the food we eat. My work has been featured in food design exhibitions at the Asian Art Museum (San Francisco), Foodinno Symposium, California Academy of
+                Sciences, Chinese Culture Center (San Francisco) and etc.</p>
+
+            </section> <!-- my intro 2 ends -->
+          </div> <!-- wrap two columns -->
+
+        </div>
+      </div>
 
 
 
@@ -98,9 +98,9 @@
           <h2>Skills & Tools</h2>
 
           <section class="row">
-            <img src="img/icons/uxdesign.png" alt="ux design icon" width="50">
+            <img src="img/icons/uxdesign.png" alt="ux design icon">
             <h3 class="tool">UX/UI Design</h3>
-            <ul class="brief">
+            <ul>
               <li>User research/synthesis/test</li>
               <li>Lo-fi & hi-fi prototype/design system</li>
               <li>Sketch App/Invision/Figma</li>
@@ -109,9 +109,9 @@
           </section>
 
           <section class="row">
-            <img src="img/icons/cocreation.png" alt="co-creation icon" width="50">
+            <img src="img/icons/cocreation.png" alt="co-creation icon">
             <h3 class="tool">Co-creation</h3>
-            <ul class="brief">
+            <ul>
               <li>Design Sprint/Design Thinking</li>
               <li>Future thinking frameworks</li>
               <li>Design experimentation</li>
@@ -119,9 +119,9 @@
           </section>
 
           <section class="row">
-            <img src="img/icons/making.png" alt="2D 3D making icon" width="50">
+            <img src="img/icons/making.png" alt="2D 3D making icon">
             <h3 class="tool">Making</h3>
-            <ul class="brief">
+            <ul>
               <li>Photoshop/Illustrator/Indesign</li>
               <li>Photography/Lightroom/Premiere</li>
               <li>Model-making/laser cut/3D print</li>
@@ -140,7 +140,7 @@
     <div class="container">
       <!-- the footer content wrapper -->
       <h2> Let's connect </h2>
-      <p>I would also love to learn more from you through a <a href="skype:tutu.yunwen">Skype call</a>. You can also reach me via email: </p>
+      <!-- <p>I would also love to learn more from you through a <a href="skype:tutu.yunwen">Skype call</a>. You can also reach me via email: </p> -->
       <div><a href="mailto:yunwentu22@gmail.com" class="button secondary">Email me</a></div>
 
       <div id="ssn">
@@ -153,7 +153,7 @@
         </ul>
       </div>
 
-      <div><a href="#top">Back to the top</a></div>
+      <!-- <div><a href="#top">Back to the top</a></div> -->
 
       <p>COPYRIGHT YUNWEN TU 2020.</p>
 
