Add two-column grid to md view

--- a/about.html
+++ b/about.html
@@ -57,11 +57,10 @@
       </div>
 
       <div id="intro-details-2">
-
         <div class="container">
 
           <div class="row" id="profile-img">
-            <picture id="my-profile">
+            <picture>
               <source srcset="img/home/head-drawing@1.png" media="(max-width:767px)">
               <img src="img/home/head-drawing@2.png" alt="Profile picture" width="200">
             </picture>
@@ -69,22 +68,26 @@
 
 
           <div>
-            <section class="row">
+            <div class="row">
               <!-- my intro 1 starts -->
-              <h2 class="hidden">More about me</h2>
-              <p>Through my works, I found business problems are very often caused by the lack of understanding of the user's needs, or not having enough tangible work to align expectations between stakeholders in order to make executions. “Design
-                process” is my way to re-evaluate the problem and to find the best solutions. It is used as a “communication interface” to align different parties’ expectations and identify the solution to the key problem that we want to test. With
-                the “design process” emphasized, I was able to validate ideas on many UX and product design projects in a more efficient manner.</p>
-            </section> <!-- my intro 1 ends -->
+              <section class="col-md-6">
+                <h2 class="hidden">More about me</h2>
+                <p>Through my works, I found business problems are very often caused by the lack of understanding of the user's needs, or not having enough tangible work to align expectations between stakeholders in order to make executions. “Design
+                  process” is my way to re-evaluate the problem and to find the best solutions. It is used as a “communication interface” to align different parties’ expectations and identify the solution to the key problem that we want to test. With
+                  the “design process” emphasized, I was able to validate ideas on many UX and product design projects in a more efficient manner.</p>
+              </section>
+            </div><!-- my intro 1 ends -->
 
-            <section class="row">
-              <p>In addition to the client’s work, I am also very interested in speculative design and the future food system. Instead of blindly worshiping technology, design and data enabled me to simulate more future possibilities. </p>
-              <p>To explore the future of food, I am seeking ways to push design boundaries to envision how the food will impact/be impacted by environmental, socioeconomic, political, and technological trends. I have collaborated with social
-                mission
-                restaurants Perennial and Don Bugito on reducing the carbon footprint of the food we eat. My work has been featured in food design exhibitions at the Asian Art Museum (San Francisco), Foodinno Symposium, California Academy of
-                Sciences, Chinese Culture Center (San Francisco) and etc.</p>
+            <div class="row">
+              <section class="col-md-6">
+                <p>In addition to the client’s work, I am also very interested in speculative design and the future food system. Instead of blindly worshiping technology, design and data enabled me to simulate more future possibilities. </p>
+                <p>To explore the future of food, I am seeking ways to push design boundaries to envision how the food will impact/be impacted by environmental, socioeconomic, political, and technological trends. I have collaborated with social
+                  mission
+                  restaurants Perennial and Don Bugito on reducing the carbon footprint of the food we eat. My work has been featured in food design exhibitions at the Asian Art Museum (San Francisco), Foodinno Symposium, California Academy of
+                  Sciences, Chinese Culture Center (San Francisco) and etc.</p>
+              </section>
+            </div><!-- my intro 2 ends -->
 
-            </section> <!-- my intro 2 ends -->
           </div> <!-- wrap two columns -->
 
         </div>
@@ -98,6 +101,7 @@
           <h2>Skills & Tools</h2>
 
           <section class="row">
+            <div class="col-md-6">
             <img src="img/icons/uxdesign.png" alt="ux design icon">
             <h3 class="tool">UX/UI Design</h3>
             <ul>
@@ -106,9 +110,11 @@
               <li>Sketch App/Invision/Figma</li>
               <li>HTML</li>
             </ul>
+          </div>
           </section>
 
           <section class="row">
+            <div class="col-md-6">
             <img src="img/icons/cocreation.png" alt="co-creation icon">
             <h3 class="tool">Co-creation</h3>
             <ul>
@@ -116,9 +122,11 @@
               <li>Future thinking frameworks</li>
               <li>Design experimentation</li>
             </ul>
+          </div>
           </section>
 
           <section class="row">
+            <div class="col-md-6">
             <img src="img/icons/making.png" alt="2D 3D making icon">
             <h3 class="tool">Making</h3>
             <ul>
@@ -127,6 +135,7 @@
               <li>Model-making/laser cut/3D print</li>
               <li>Rhino/Solidworks/Keyshot</li>
             </ul>
+          </div>
           </section>
 
         </div> <!-- skills ends -->
