--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       <div>
         <h1>Hi! I’m Tutu.</h1>
         <p class="hero-intro">I am a <a href="#projects">UX/UI</a> and a <a href="http://tutufooddesign.com/" target="_blank">food</a> designer.
-        As one of the co-founder at <a href="https://www.the-six.co/" target="_blank">The Six</a>, I have worked with clients in AI, education, automobile, energy, and fintech industries. </p>
+          As one of the co-founder at <a href="https://www.the-six.co/" target="_blank">The Six</a>, I have worked with clients in AI, education, automobile, energy, and fintech industries. </p>
         <p class="hero-intro">To me, design process empowers me to learn about people & technology and to shape a more preferable future.</p>
       </div>
 
@@ -66,48 +66,52 @@
 
         <!-- Case 1 -->
         <section id="project-1" class="row">
-
           <div class="container">
-            <!-- column 1 starts -->
-            <!-- Q: I would love to explore how to make a hover-over effect for this section  -->
-            <a href="design-a-new-investment-product.html">
-              <picture>
-                <source srcset="img/home/investment-product-alpha@1.png" media="(max-width:767px)">
-                <img src="img/home/investment-product-alpha@2.png" alt="Launch a new investment product">
-              </picture>
-            </a>
-          </div>
 
-          <div class="container">
-            <!-- column 2 starts -->
-            <h3>Launch a New Investment Product</h3>
-            <p>Design website targeting real estate investors, to build trust and explain the financial model in an efficient way.
-            </p>
-            <a href="design-a-new-investment-product.html" class="button">Learn more</a> <!-- individual project CTA button, might change this later for more UX consideration-->
-          </div>
+            <div class="col-md-6">
+              <!-- column 1 starts -->
+              <!-- Q: I would love to explore how to make a hover-over effect for this section  -->
+              <a href="design-a-new-investment-product.html">
+                <picture>
+                  <source srcset="img/home/investment-product-alpha@1.png" media="(max-width:767px)">
+                  <img src="img/home/investment-product-alpha@2.png" alt="Launch a new investment product">
+                </picture>
+              </a>
+            </div>
 
+            <div class="col-md-6">
+              <!-- column 2 starts -->
+              <h3>Launch a New Investment Product</h3>
+              <p>Design website targeting real estate investors, to build trust and explain the financial model in an efficient way.
+              </p>
+              <a href="design-a-new-investment-product.html" class="button">Learn more</a> <!-- individual project CTA button, might change this later for more UX consideration-->
+            </div>
+
+          </div>
         </section> <!-- case 1 ends -->
 
         <!-- Case 2 -->
         <section id="project-2" class="row">
-
           <div class="container">
-            <!-- column 1 starts -->
-            <a href="case2">
-              <picture>
-                <source srcset="img/home/ITSM-alpha@1.png" media="(max-width:767px)">
-                <img src="img/home/ITSM-alpha@2.png" alt="IT Service Management Design">
-              </picture>
-            </a>
-          </div>
 
-          <div class="container">
-            <!-- Column 2 starts -->
-            <h3>IT Service Management Design</h3>
-            <p>Rapid prototype and iterate new ITSM system design with the users, through Design Thinking process. </p>
-            <a href="case2" class="button">Learn more</a> <!-- individual project button -->
-          </div>
+            <div class="col-md-6">
+              <!-- Column 1 starts -->
+              <h3>IT Service Management Design</h3>
+              <p>Rapid prototype and iterate new ITSM system design with the users, through Design Thinking process. </p>
+              <a href="case2" class="button">Learn more</a> <!-- individual project button -->
+            </div>
 
+            <!-- column 2 starts -->
+            <div class="col-md-6">
+              <a href="case2">
+                <picture>
+                  <source srcset="img/home/ITSM-alpha@1.png" media="(max-width:767px)">
+                  <img src="img/home/ITSM-alpha@2.png" alt="IT Service Management Design">
+                </picture>
+              </a>
+            </div>
+
+          </div>
         </section> <!-- case 2 ends -->
 
       </div>
