Add id to about page

--- a/about.html
+++ b/about.html
@@ -17,7 +17,7 @@
   <!-- may change the favicon design later -->
 </head>
 
-<body>
+<body id="about-page">
 
   <!-- Header and navigation -->
   <header id="top">
